# containers

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  containers.toml  containers.toml.example  entrypoint.sh  run.sh
claude-docker/claude-mitsuba-docker/: CLAUDE.md  Dockerfile  README.md  copy-driver.sh  entrypoint.sh  run-claude.sh
containers/: Cargo.toml
containers/src/: config.rs  container.rs  dockerfile.rs  errors.rs  main.rs
dockerfiles/: Dockerfile.default  entrypoint.sh
src/: config.rs  container.rs  dockerfile.rs  engine.rs  errors.rs  lib.rs  lockfile.rs  main.rs
