[package]
name = "containers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "containers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
home = "0.5"
which = "4.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
users = "0.11"
